--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests",
+    "test:watch": "tsdx test --watch",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
@@ -36,6 +37,11 @@
   "name": "product-card-react-patterns",
   "author": "kevin-Illu",
   "module": "dist/product-card-react-patterns.esm.js",
+  "repository": {
+    "url": "https://github.com/Kevin-Illu/product-card-react-patterns",
+    "type": "git"
+  },
+  "homepage": "https://github.com/Kevin-Illu/product-card-react-patterns",
   "size-limit": [
     {
       "path": "dist/product-card-react-patterns.cjs.production.min.js",
@@ -47,16 +53,34 @@
     }
   ],
   "devDependencies": {
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15",
     "@rollup/plugin-image": "^3.0.2",
     "@size-limit/preset-small-lib": "^9.0.0",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
+    "babel-jest": "^29.7.0",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
     "size-limit": "^9.0.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "@types/react-test-renderer": "^18.0.3"
+
+  },
+  "keywords": [
+    "product",
+    "card",
+    "prueba"
+  ],
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "identity-obj-proxy",
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    }
   }
 }
